--- a/agent-no-loop.ipynb
+++ b/agent-no-loop.ipynb
@@ -15,8 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Chain of Thought (CoT)\n",
-    "\n",
+    "#### ReAct(Reason + Act) Agent using Chain of Thought (CoT)\n",
     "<img src=\"CoT.png\" width=\"300\">"
    ]
   },
@@ -24,8 +23,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Agent using Chain of Thought (CoT)\n",
-    "\n",
     "<img src=\"agent-2.png\" width=\"700\">"
    ]
   },
