--- a/agent-no-loop.ipynb
+++ b/agent-no-loop.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -37,14 +37,13 @@
        "True"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#!pip install groq\n",
-    "\n",
     "from dotenv import load_dotenv\n",
     "import os\n",
     "from groq import Groq\n",
@@ -53,8 +52,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visit https://console.groq.com/keys and get an API"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -68,19 +74,19 @@
       "3. **Edge Computing**: With the increasing adoption of edge computing, fast language models can be deployed on edge devices, such as smartphones, smart home devices, and IoT devices, enabling real-time processing and reducing latency.\n",
       "4. **Real-time Applications**: Fast language models are essential for real-time applications, such as:\n",
       "\t* Speech recognition: Fast language models can recognize spoken language in real-time, enabling applications like voice assistants and speech-to-text systems.\n",
-      "\t* Language translation: Fast language models can translate text in real-time, making them suitable for applications like chatbots and language translation apps.\n",
-      "\t* Sentiment analysis: Fast language models can analyze sentiment in real-time, enabling applications like social media monitoring and customer feedback analysis.\n",
+      "\t* Language translation: Fast language models can translate text in real-time, making them suitable for applications like instant messaging and online collaboration.\n",
+      "\t* Sentiment analysis: Fast language models can analyze sentiment in real-time, enabling applications like customer service chatbots and social media monitoring.\n",
       "5. **Improved User Experience**: Fast language models can provide a better user experience by:\n",
       "\t* Reducing latency: Fast language models can respond quickly to user input, reducing the time it takes to process and respond to user queries.\n",
       "\t* Enabling conversational interfaces: Fast language models can power conversational interfaces, such as chatbots and voice assistants, making it easier for users to interact with devices and services.\n",
       "6. **Advancements in AI**: Fast language models can accelerate the development of artificial intelligence (AI) and machine learning (ML) applications by:\n",
-      "\t* Enabling faster training: Fast language models can be trained quickly, allowing researchers to iterate and improve AI and ML models faster.\n",
-      "\t* Improving model accuracy: Fast language models can be used to fine-tune and improve the accuracy of AI and ML models, leading to better performance and decision-making.\n",
-      "7. **Cost-Effective**: Fast language models can reduce costs by:\n",
-      "\t* Reducing computational resources: Fast language models require less computational power, reducing the need for expensive hardware and infrastructure.\n",
-      "\t* Enabling cloudless processing: Fast language models can be deployed on edge devices, reducing the need for cloud-based processing and associated costs.\n",
+      "\t* Enabling faster training: Fast language models can be trained quickly, allowing researchers to iterate and improve AI models faster.\n",
+      "\t* Improving model accuracy: Fast language models can be used to fine-tune AI models, leading to improved accuracy and performance.\n",
+      "7. **Cost-Effective**: Fast language models can reduce costs associated with:\n",
+      "\t* Data storage: Fast language models require less storage space, reducing the need for expensive data storage solutions.\n",
+      "\t* Compute resources: Fast language models can run on lower-end hardware, reducing the need for expensive compute resources.\n",
       "\n",
-      "In summary, fast language models are crucial for various applications that require real-time processing, scalability, and resource efficiency. They can improve user experience, accelerate AI and ML development, and reduce costs, making them an essential component of modern language processing systems.\n"
+      "In summary, fast language models are crucial for various applications that require real-time processing, scalability, and resource efficiency. They can improve user experience, accelerate AI and ML development, and reduce costs associated with data storage and compute resources.\n"
      ]
     }
    ],
@@ -100,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -113,19 +119,19 @@
        "3. **Edge Computing**: With the increasing adoption of edge computing, fast language models can be deployed on edge devices, such as smartphones, smart home devices, and IoT devices, enabling real-time processing and reducing latency.\n",
        "4. **Real-time Applications**: Fast language models are essential for real-time applications, such as:\n",
        "\t* Speech recognition: Fast language models can recognize spoken language in real-time, enabling applications like voice assistants and speech-to-text systems.\n",
-       "\t* Language translation: Fast language models can translate text in real-time, making them suitable for applications like chatbots and language translation apps.\n",
-       "\t* Sentiment analysis: Fast language models can analyze sentiment in real-time, enabling applications like social media monitoring and customer feedback analysis.\n",
+       "\t* Language translation: Fast language models can translate text in real-time, making them suitable for applications like instant messaging and online collaboration.\n",
+       "\t* Sentiment analysis: Fast language models can analyze sentiment in real-time, enabling applications like customer service chatbots and social media monitoring.\n",
        "5. **Improved User Experience**: Fast language models can provide a better user experience by:\n",
        "\t* Reducing latency: Fast language models can respond quickly to user input, reducing the time it takes to process and respond to user queries.\n",
        "\t* Enabling conversational interfaces: Fast language models can power conversational interfaces, such as chatbots and voice assistants, making it easier for users to interact with devices and services.\n",
        "6. **Advancements in AI**: Fast language models can accelerate the development of artificial intelligence (AI) and machine learning (ML) applications by:\n",
-       "\t* Enabling faster training: Fast language models can be trained quickly, allowing researchers to iterate and improve AI and ML models faster.\n",
-       "\t* Improving model accuracy: Fast language models can be used to fine-tune and improve the accuracy of AI and ML models, leading to better performance and decision-making.\n",
-       "7. **Cost-Effective**: Fast language models can reduce costs by:\n",
-       "\t* Reducing computational resources: Fast language models require less computational power, reducing the need for expensive hardware and infrastructure.\n",
-       "\t* Enabling cloudless processing: Fast language models can be deployed on edge devices, reducing the need for cloud-based processing and associated costs.\n",
+       "\t* Enabling faster training: Fast language models can be trained quickly, allowing researchers to iterate and improve AI models faster.\n",
+       "\t* Improving model accuracy: Fast language models can be used to fine-tune AI models, leading to improved accuracy and performance.\n",
+       "7. **Cost-Effective**: Fast language models can reduce costs associated with:\n",
+       "\t* Data storage: Fast language models require less storage space, reducing the need for expensive data storage solutions.\n",
+       "\t* Compute resources: Fast language models can run on lower-end hardware, reducing the need for expensive compute resources.\n",
        "\n",
-       "In summary, fast language models are crucial for various applications that require real-time processing, scalability, and resource efficiency. They can improve user experience, accelerate AI and ML development, and reduce costs, making them an essential component of modern language processing systems."
+       "In summary, fast language models are crucial for various applications that require real-time processing, scalability, and resource efficiency. They can improve user experience, accelerate AI and ML development, and reduce costs associated with data storage and compute resources."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -142,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,8 +175,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reference : https://til.simonwillison.net/llms/python-react-pattern"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +286,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'role': 'system',\n",
+       "  'content': \"You run in a loop of Thought, Action, PAUSE, Observation.\\nAt the end of the loop you output an Answer\\nUse Thought to describe your thoughts about the question you have been asked.\\nUse Action to run one of the actions available to you - then return PAUSE.\\nObservation will be the result of running those actions.\\n\\nYour available actions are:\\n\\ncalculate:\\ne.g. calculate: 4 * 7 / 3\\nRuns a calculation and returns the number - uses Python so be sure to use floating point syntax if necessary\\n\\nget_planet_mass:\\ne.g. get_planet_mass: Earth\\nreturns weight of the planet in kg\\n\\nExample session:\\n\\nQuestion: What is the mass of Earth times 2?\\nThought: I need to find the mass of Earth\\nAction: get_planet_mass: Earth\\nPAUSE \\n\\nYou will be called again with this:\\n\\nObservation: 5.972e24\\n\\nThought: I need to multiply this by 2\\nAction: calculate: 5.972e24 * 2\\nPAUSE\\n\\nYou will be called again with this: \\n\\nObservation: 1,1944×10e25\\n\\nIf you have the answer, output it as the Answer.\\n\\nAnswer: The mass of Earth times 2 is 1,1944×10e25.\\n\\nNow it's your turn:\"},\n",
+       " {'role': 'user', 'content': 'What is the mass of Mercury times 5?'},\n",
+       " {'role': 'assistant',\n",
+       "  'content': 'Thought: I need to find the mass of Mercury.'}]"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "neil_tyson.messages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -304,13 +341,13 @@
     }
    ],
    "source": [
-    "result = get_planet_mass(\"mercury\")\n",
+    "result = get_planet_mass(\"Mercury\")\n",
     "print(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +356,7 @@
        "'Observation: 3.285e+23'"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +402,7 @@
        " {'role': 'assistant', 'content': 'Thought: I need to multiply this by 5.'}]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +459,7 @@
        "'Observation: 1.6425e+24'"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +480,7 @@
        "'Answer: The mass of Mercury times 5 is 1.6425e+24.'"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
